# lidar_moving_detection

./: CMakeLists.txt  README.md  package.xml
include/: view_pointcloud.launch
src/scripts/: point_detector.cpp  rpscan_listener.cpp
